# MathFoundry

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
deploy/: docker-compose.selfhost.yml  nginx.mathfoundry.conf
docs/: AG-SUBAREA-TAXONOMY-v1.md  CHANGELOG-2026-03-02.md  EVALUATION-PLAN.md  LEAN-EVALUATION.md  PHASE3-PLAN.md  POC-PROOF-v1.md  PRD.md  RFC-0001-citation-grounded-qa-architecture.md  RFC-0002-ingestion-and-canonical-schema.md  RFC-0003-retrieval-and-reranking-strategy.md  RFC-0004-grounded-answer-generation-and-citation-verification.md  RFC-0005-hosted-deployment-and-cost-model.md  RFC-0006-web-ux-and-ask-interaction-model.md  RFC-INDEX.md  SELF-HOST-SETUP.md  SYSTEM-REQUIREMENTS-AND-COSTS.md  WEB-APP-AND-LOCAL-FLOW.md
eval/: README.md
eval/benchmark/: ag_queries_in_corpus_v1.jsonl  ag_queries_v1.jsonl  ag_queries_weak_corpus_v1.jsonl  queries.jsonl
eval/results/: RESULTS-PLAIN-ENGLISH-v1.md  s0_pure_llm_filled.jsonl  s0_pure_llm_in_corpus_gpt53_v1.jsonl  s0_pure_llm_in_corpus_v1.jsonl  s0_pure_llm_template.jsonl  s0_pure_llm_weak_corpus_gpt53_v1.jsonl  s0_pure_llm_weak_corpus_v1.jsonl  s2_rag_verify.jsonl  summary.json  (+4 more)
mathfoundry/: app.py  arxiv.py  config.py  grounding.py  indexing.py  io_utils.py  models.py  retrieval.py  subareas.py  web.py
queries/: preset_ag_v1.jsonl
scripts/: build_lexical_index.py  fetch_ag_all.py  fetch_ag_focus_10k.py  fetch_arxiv_slice.py  ingest_arxiv_math_ag.py  run_ag_full_until_done.sh  worker_ingest_loop.py
tests/: test_api.py  test_indexing.py  test_subareas.py
(+7 files in other folders)
