[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathfoundry"
version = "0.1.0"
description = "Citation-grounded math literature QA agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools]
packages = ["mathfoundry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
